--- a/aboutme.html
+++ b/aboutme.html
@@ -51,7 +51,7 @@
           <tr><td><b>Program Code:</b></td><td>CDIM262</td></tr>
           <tr><td><b>Faculty:</b></td><td>Faculty of Information Science</td></tr>
           <tr><td><b>Submission Date:</b></td><td>10 June 2025</td></tr>
-          <tr><td><b>Published URL:</b></td><td><a href="https://yourwebhost.com/yourname">https://yourwebhost.com/yourname</a></td></tr>
+          <tr><td><b>Published URL:</b></td><td><a href="https://hykarlll.github.io/personal-website/index.html">https://hykarlll.github.io/personal-website/index.html</a></td></tr>
         </table>
 
         <br><br>
