--- a/index.html
+++ b/index.html
@@ -11,23 +11,19 @@
 <body background="images/background.jpg" text="white" link="white" alink="yellow" vlink="gray">
 
 <!-- HEADER -->
-<table width="100%" bgcolor="#003344" cellpadding="20">
+<table width="80%" bgcolor="#003344" cellpadding="20" align="center">
   <tr>
     <td align="center">
      <a href="images/header.png" target="_blank">
-     <img src="images/header.png" alt="Header Image" width="100%" height="200" title="Click to view full image">
+     <img src="images/header.png" alt="Header Image" width="100%" height="150" title="Click to view full image">
      </a>
        <h1><font face="Arial">Welcome to My Personal Website</font></h1>
-       <font face="Arial" size="3">
-        <a href="https://uitm.edu.my/index.php/en/" target="_blank">UiTM Official Website</a> |
-        <a href="https://kppim.uitm.edu.my/index.php/information-science" target="_blank">Faculty of Information Science</a>
-      </font>
     </td>
   </tr>
 </table>
 
 <!-- NAVIGATION (Horizontal Menu) -->
-<table width="100%" bgcolor="#005577" cellpadding="10">
+<table width="80%" bgcolor="#005577" cellpadding="10" align="center">
   <tr align="center">
     <td><font face="Arial" size="3"><a href="index.html"><b>🏠Home</b></a></font></td>
     <td><font face="Arial" size="3"><a href="cv.html"><b>📑CV</b></a></font></td>
@@ -53,36 +49,37 @@
 
         <hr width="60%">
 
-        <h2>My Goals</h2>
-        <ul align="center">
-          <li>Graduate with excellent academic results</li>
-          <li>Secure an internship in the IT industry</li>
-          <li>Develop a professional portfolio</li>
-          <li>Master modern web development tools</li>
-        </ul>
-
-        <h2>My Skills</h2>
+        <h2>My Skills & Goals</h2>
         <table border="1" cellpadding="10" cellspacing="0" bgcolor="#001C30">
           <tr bgcolor="#005577" align="center">
             <th>Skill</th>
             <th>Proficiency</th>
+	    <th>Goals</th>
           </tr>
           <tr>
             <td>HTML5</td>
             <td>Advanced</td>
+            <td>Graduate with excellent academic results</td>
           </tr>
           <tr>
             <td>CSS3</td>
             <td>Intermediate</td>
+            <td>Secure an internship in the IT industry</td>
           </tr>
           <tr>
             <td>JavaScript</td>
             <td>Beginner</td>
+            <td>Develop a professional portfolio</td>
           </tr>
+	  <tr>
+	    <td>PHP</td>
+	    <td>Beginner</td>
+            <td>Master modern web development tools</td>
         </table>
 
         <h2>My Interests</h2>
         <p>I enjoy photography, learning something new, and research about technology. I also love exploring new gadgets and analyzing how digital innovations affect modern lifestyles. Visit my <a href="portfolio.html"><b>Portfolio</b></a> to see some of my work.</p>
+        <a href="images/hobby.jpg" target="_blank">
         <img src="images/hobby.jpg" alt="Hobby Image" width="300" border="2" title="Photograph is one of my hobbies :)">
 
 	<p align="right"><a href="#top">Back to Top</a></p>
@@ -92,11 +89,11 @@
 </table>
 
 <!-- FOOTER -->
-<table width="100%" bgcolor="#003344" cellpadding="10">
+<table width="80%" bgcolor="#003344" cellpadding="10" align="center">
   <tr>
     <td align="center">
       <font face="Arial" size="2" color="white">
-        &copy; 2025 Muhammad Haikal Farihin bin Muhd Zahidi Ridzuan. Recommended browser: Chrome. Resolution: 1920x1080. Last updated: June 1, 2025.
+        &copy; 2025 Muhammad Haikal Farihin bin Muhd Zahidi Ridzuan. Recommended browser: Chrome 137.0.7151.68/69. Resolution: 1920x1080. Last updated: June 1, 2025.
       </font>
     </td>
   </tr>
