--- a/cv.html
+++ b/cv.html
@@ -11,11 +11,11 @@
 <body background="images/background.jpg" text="white" link="white" vlink="white" alink="yellow">
 
 <!-- HEADER -->
-<table width="100%" bgcolor="#003344" cellpadding="20">
+<table width="80%" bgcolor="#003344" cellpadding="20" align="center">
   <tr>
     <td align="center">
      <a href="images/header.png" target="_blank">
-     <img src="images/header.png" alt="Header Image" width="100%" height="200" title="Click to view full image">
+     <img src="images/header.png" alt="Header Image" width="100%" height="150" title="Click to view full image">
      </a>
       <h1><font face="Arial">Curriculum Vitae</font></h1>
       <p align="center">
@@ -33,7 +33,7 @@
 </table>
 
 <!-- NAVIGATION BAR -->
-<table width="100%" bgcolor="#005577" cellpadding="10">
+<table width="80%" bgcolor="#005577" cellpadding="10" align="center">
   <tr align="center">
     <td><font face="Arial" size="3"><b><a href="index.html">🏠Home</a></b></font></td>
     <td><font face="Arial" size="3"><b><a href="cv.html">📑CV</a></b></font></td>
@@ -56,19 +56,44 @@
         </p>
 
         <center><h2 id="education">Education</h2></center>
-        <ul>
-          <li><b>2024–2028:</b> Bachelor of Information Science (Hons.) Information System Management, Universiti Teknologi Mara</li>
-          <li><b>2023–2024:</b> Matriculation in Accounting, Kolej Matrikulasi Perlis</li>
-        </ul>
+        <table border="1" cellpadding="10" cellspacing="0" bgcolor="#003344" width="100%">
+          <tr bgcolor="#005577" align="center">
+            <th>Year</th>
+            <th>Details</th>
+          </tr>
+          <tr>
+            <td align="center">2024–2028</td>
+            <td></b> Bachelor of Information Science (Hons.) Information System Management, Universiti Teknologi Mara (UiTM)<br>CGPA: 3.85</td>
+          </tr>
+          <tr>
+            <td align="center">2023-2024</td>
+            <td></b> Matriculation in Accounting, Kolej Matrikulasi Perlis (KMP)<br>CGPA: 3.96</td>
+          </tr>
+          <tr>
+            <td align="center">2018-2023</td>
+            <td>Sekolah Menegah Kebangsaan Seksyen 27 (SMKS27)<br>SPM: 7A 1B</td>
+          </tr>
+        </table>
 
         <center><h2 id="experience">Experience</h2></center>
-        <ul>
-          <li><b>Intern, Microsoft Company</b> – Jan 2028 to May 2028<br>Assisted in front-end development and user testing.</li>
-          <li><b>Freelancer</b> – 2025–2026<br>Created personal websites using HTML5/CSS3.<br>Designed digital posters and social media campaigns using Canva and CapCut.</li>
-        </ul>
+        <table border="1" cellpadding="10" cellspacing="0" bgcolor="#003344" width="100%">
+          <tr bgcolor="#005577" align="center">
+            <th>Year</th>
+            <th>Work Details</th>
+          </tr>
+          <tr>
+            <td align="center">Jan 2028 to May 2028</td>
+            <td><b>Intern, Microsoft Company</b><br>Assisted in front-end development and user testing</td>
+          </tr>
+          <tr>
+            <td align="center">2025-2026</td>
+            <td><b>Freelancer</b><br>Created personal websites using HTML5/CSS3.<br>Designed digital posters and social media campaigns using Canva and CapCut</td>
+          </tr>
+          <tr>
+	</table>
 
         <center><h2 id="skills">Skills</h2></center>
-        <table border="1" cellpadding="10" cellspacing="0" bgcolor="#003344" width="100%">
+        <table border="1" cellpadding="10" cellspacing="0" bgcolor="#003344" width="100%" align="center">
           <tr bgcolor="#005577" align="center">
             <th>Skill</th>
             <th>Proficiency</th>
@@ -88,19 +113,38 @@
         </table>
 
         <center><h2 id="certifications">Certifications</h2></center>
-        <ul>
-          <li>Google Digital Garage - Fundamentals of Digital Marketing</li>
-          <li>UiTM Certificate of Excellence in Web Design (2024)</li>
-        </ul>
-        <p><img src="images/cert1.png" alt="Digital Marketing Cert" width="200" title="This is a fake certificate for this assignment uses only"></p>
+
+<table align="center">
+  <tr>
+    <td><a href="images/cert1.png" target="_blank"><img src="images/cert1.png" alt="Cert 1" width="200" title="Google Digital Garage - Fundamentals of Digital Marketing"></td>
+    <td><a href="images/cert2.png" target="_blank"><img src="images/cert2.png" alt="Cert 2" width="200" title="Internship completion certificate"></td>
+  </tr>
+</table>
+
 
         <center><h2 id="languages">Languages</h2></center>
-        <ul>
-          <li>Malay ★ ★ ★ ★ ★</li>
-          <li>English ★ ★ ★ ★ ★</li>
-          <li>French ★ ★ ★</li>
-          <li>Mandarin ★ ★</li>
-        </ul>
+        <table border="1" cellpadding="10" cellspacing="0" bgcolor="#003344" width="50%" align="center">
+          <tr bgcolor="#005577" align="center">
+            <th>Languages</th>
+            <th>Proficiency</th>
+          </tr>
+          <tr>
+            <td>Malay</td>
+            <td>★ ★ ★ ★ ★</td>
+          </tr>
+          <tr>
+            <td>English</td>
+            <td>★ ★ ★ ★ ★</td>
+          </tr>
+          <tr>
+            <td>French</td>
+            <td>★ ★ ★</td>
+          </tr>
+          <tr>
+            <td>Mandarin</td>
+            <td>★ ★ ★</td>
+          </tr>
+        </table>
 
         <p align="right"><a href="#top">Back to Top</a></p>
 
@@ -114,7 +158,7 @@
   <tr>
     <td align="center">
       <font face="Arial" size="2" color="white">
-        &copy; 2025 Muhammad Haikal Farihin bin Muhd Zahidi Ridzuan. Recommended browser: Chrome. Resolution: 1920x1080. Last updated: June 1, 2025.
+        &copy; 2025 Muhammad Haikal Farihin bin Muhd Zahidi Ridzuan. Recommended browser: Chrome 137.0.7151.68/69. Resolution: 1920x1080. Last updated: June 1, 2025.
       </font>
     </td>
   </tr>
