--- a/portfolio.html
+++ b/portfolio.html
@@ -11,11 +11,11 @@
 <body background="images/background.jpg" text="white" link="white" vlink="white" alink="yellow">
 
 <!-- HEADER -->
-<table width="100%" bgcolor="#003344" cellpadding="20">
+<table width="80%" bgcolor="#003344" cellpadding="20" align="center">
   <tr>
     <td align="center">
      <a href="images/header.png" target="_blank">
-     <img src="images/header.png" alt="Header Image" width="100%" height="200" title="Click to view full image">
+     <img src="images/header.png" alt="Header Image" width="100%" height="150" title="Click to view full image">
      </a>
       <h1 id="top"><font face="Arial">Portfolio</font></h1>
 	<p align="center">
@@ -32,7 +32,7 @@
 </table>
 
 <!-- NAVIGATION -->
-<table width="100%" bgcolor="#005577" cellpadding="10">
+<table width="80%" bgcolor="#005577" cellpadding="10" align="center">
   <tr align="center">
     <td><font face="Arial"><b><a href="index.html">🏠Home</a></b></font></td>
     <td><font face="Arial"><b><a href="cv.html">📑CV</a></b></font></td>
@@ -99,17 +99,35 @@
     <td>
       <font face="Arial">
         <center><h2>Skills & Tools Summary</h2></center>
-        <ul>
-          <li>Proficient in HTML5 for website layout and structure.</li>
-          <li>Basic experience with Canva, Photoshop, and design tools.</li>
-          <li>Familiar with database design using Microsoft Access and SQL.</li>
-          <li>Capable of creating mockups, proposals, and academic presentations.</li>
-          <li>Teamwork and leadership in class and club projects.</li>
-        </ul>
+
+        <table align="center" cellpadding="5" width="90%">
+          <tr>
+            <td width="10%" align="center">✔️</td>
+            <td><b>Proficient in</b> HTML5 for website layout and structure.</td>
+          </tr>
+          <tr>
+            <td align="center">✔️</td>
+            <td><b>Basic experience</b> with Canva, Photoshop, and other design tools.</td>
+          </tr>
+          <tr>
+            <td align="center">✔️</td>
+            <td><b>Familiar with</b> database design using Microsoft Access and SQL.</td>
+          </tr>
+          <tr>
+            <td align="center">✔️</td>
+            <td><b>Capable of</b> creating mockups, proposals, and academic presentations.</td>
+          </tr>
+          <tr>
+            <td align="center">✔️</td>
+            <td><b>Team player</b> with leadership experience in class and club projects.</td>
+          </tr>
+        </table>
+
       </font>
     </td>
   </tr>
 </table>
+
 
 	  <p align="center"><a href="#top">Back to Top</a></p>
       </font>
@@ -118,11 +136,11 @@
 </table>
 
 <!-- FOOTER -->
-<table width="100%" bgcolor="#003344" cellpadding="10">
+<table width="80%" bgcolor="#003344" cellpadding="10" align="center">
   <tr>
     <td align="center">
       <font face="Arial" size="2" color="white">
-        &copy; 2025 Muhammad Haikal Farihin bin Muhd Zahidi Ridzuan. Recommended browser: Chrome. Resolution: 1920x1080. Last updated: June 1, 2025.
+        &copy; 2025 Muhammad Haikal Farihin bin Muhd Zahidi Ridzuan. Recommended browser: Chrome 137.0.7151.68/69. Resolution: 1920x1080. Last updated: June 1, 2025.
       </font>
     </td>
   </tr>
