--- a/activities.html
+++ b/activities.html
@@ -14,11 +14,11 @@
 
 
 <!-- HEADER -->
-<table width="100%" bgcolor="#003344" cellpadding="20">
+<table width="80%" bgcolor="#003344" cellpadding="20" align="center">
   <tr>
     <td align="center">
      <a href="images/header.png" target="_blank">
-     <img src="images/header.png" alt="Header Image" width="100%" height="200" title="Click to view full image">
+     <img src="images/header.png" alt="Header Image" width="100%" height="150" title="Click to view full image">
      </a>
       <h1><font face="Arial">Co-Curricular Activities</font></h1>
 	<p align="center">
@@ -35,7 +35,7 @@
 
 
 <!-- NAVIGATION -->
-<table width="100%" bgcolor="#005577" cellpadding="10">
+<table width="80%" bgcolor="#005577" cellpadding="10" align="center">
   <tr align="center">
     <td><font face="Arial"><b><a href="index.html">🏠Home</a></b></font></td>
     <td><font face="Arial"><b><a href="cv.html">📑CV</a></b></font></td>
@@ -56,21 +56,73 @@
       <font face="Arial">
 
         <center><h2 id="university">University Clubs & Involvement</h2></center>
-        <ul>
-          <li><b>Member, Tech Club</b> – 2025–Present<br>Participated in software workshops, and weekly tech talks.</li>
-          <li><b>Event Crew, Student Council</b> – 2023<br>Assisted in organizing university-level events such as orientation week and career fairs.</li>
-          <li><b>Volunteer, Green Campus Initiative</b> – 2022<br>Involved in environmental campaigns and recycling programs.</li>
-          <li><b>Exco Member, IMSA Club</b> – 2025–2028<br>Participated in club events, program leadings, software training sessions, and MAJIS activities.</li>
-          <li><b>Member, SMF Club</b> – 2026–2028<br>Multimedia bureau member, helped with faculty events such as SUPRO.</li>
-        </ul>
+        <table border="1" cellpadding="10" cellspacing="0" bgcolor="#003344" width="100%">
+          <tr bgcolor="#005577" align="center">
+            <th>Club Involvement</th>
+            <th>Description</th>
+          </tr>
+          <tr>
+            <td><b>Member, Tech Club</b> – 2025–Present</td>
+            <td>Participated in software workshops, and weekly tech talks</td>
+          </tr>
+          <tr>
+            <td><b>Event Crew, Student Council</b> – 2023</td>
+            <td>Assisted in organizing university-level events such as orientation week and career fairs</td>
+          </tr>
+          <tr>
+            <td><b>Volunteer, Green Campus Initiative</b> – 2022</td>
+            <td>Involved in environmental campaigns and recycling programs</td>
+          </tr>
+          <tr>
+            <td><b>Exco Member, IMSA Club</b> – 2025–2028</td>
+            <td>Participated in club events, program leadings, software training sessions, and MAJIS activities</td>
+          </tr>
+          <tr>
+            <td><b>Member, SMF Club</b> – 2026–2028</td>
+            <td>Multimedia bureau member, helped with faculty events such as SUPRO</td>
+          </tr>
+        </table>
+<br>
+
+<table align="center">
+  <tr>
+    <td><a href="images/cert3.png" target="_blank"><img src="images/cert3.png" alt="Cert 1" width="200" title="IMSA Certificate"></td>
+    <td><a href="images/cert4.png" target="_blank"><img src="images/cert4.png" alt="Cert 2" width="200" title="Faculty Programs Certificate"></td>
+  </tr>
+</table>
+
+        <hr width="60%">
 
         <center><h2 id="matriculation">Matriculation Clubs & Involvement</h2></center>
-        <ul>
-          <li><b>Member, Cultural Club</b> – 2023–2024<br>Learned cultural activities such as acting and dancing. Performed in events like "Malam Kebudayaan".</li>
-          <li><b>Pusat Islam</b> – 2023–2024<br>Participated in religious events such as prime iftar during Ramadan.</li>
-          <li><b>Event Participant</b> – 2023–2024<br>Joined various college events such as Volleyball, Career Fair, Anesthesia, and more.</li>
-       </ul>
+        <table border="1" cellpadding="10" cellspacing="0" bgcolor="#003344" width="100%">
+          <tr bgcolor="#005577" align="center">
+            <th>Club Involvement</th>
+            <th>Description</th>
+          </tr>
+          <tr>
+            <td><b>Member, Cultural Club</b> – 2023–2024</td>
+            <td>Learned cultural activities such as acting and dancing. Performed in events like "Malam Kebudayaan"</td>
+          </tr>
+          <tr>
+            <td><b>Pusat Islam</b> – 2023–2024</td>
+            <td>Participated in religious events such as prime iftar during Ramadan</td>
+          </tr>
+          <tr>
+            <td><b>Event Participant</b> – 2023–2024</td>
+            <td>Joined various college events such as Volleyball, Career Fair, Anesthesia, and more</td>
+          </tr>
+        </table>
+
 	<br>
+
+<table align="center">
+  <tr>
+    <td><a href="images/cert5.png" target="_blank"><img src="images/cert5.png" alt="Cert 1" width="200" title="Pusat Islam Cert"></td>
+    <td><a href="images/cert6.png" target="_blank"><img src="images/cert6.png" alt="Cert 1" width="200" title="Kelab Kebudayaan Cert"></td>
+  </tr>
+</table>
+
+        <hr width="60%">
 
 <center><h2 id="skills">Skills Gained from Involvement</h2></center>
         <table border="1" cellpadding="10" cellspacing="0" bgcolor="#003344" width="100%">
@@ -79,19 +131,19 @@
             <th>Description</th>
           </tr>
           <tr>
-            <td>Leadership</td>
+            <td align="center"><b>Leadership</b></td>
             <td>Developed through organizing and managing club events</td>
           </tr>
           <tr>
-            <td>Teamwork</td>
+            <td align="center"><b>Teamwork</b></td>
             <td>Collaborated effectively in group projects and events</td>
           </tr>
           <tr>
-            <td>Communication</td>
+            <td align="center"><b>Communication</b></td>
             <td>Improved public speaking and event coordination skills</td>
           </tr>
           <tr>
-            <td>Creativity & Design</td>
+            <td align="center"><b>Creativity & Design</b></td>
             <td>Contributed multimedia materials for club promotions</td>
           </tr>
         </table>
@@ -108,11 +160,11 @@
 
 
 <!-- FOOTER -->
-<table width="100%" bgcolor="#003344" cellpadding="10">
+<table width="80%" bgcolor="#003344" cellpadding="10" align="center">
   <tr>
     <td align="center">
       <font face="Arial" size="2" color="white">
-        &copy; 2025 Muhammad Haikal Farihin bin Muhd Zahidi Ridzuan. Recommended browser: Chrome. Resolution: 1920x1080. Last updated: June 1, 2025.
+        &copy; 2025 Muhammad Haikal Farihin bin Muhd Zahidi Ridzuan. Recommended browser: Chrome 137.0.7151.68/69. Resolution: 1920x1080. Last updated: June 1, 2025.
       </font>
     </td>
   </tr>
