--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,11 @@
 <body background="images/background.jpg" text="white" link="#00ccff" vlink="#00ccff" alink="yellow">
 
 <!-- HEADER -->
-<table width="100%" bgcolor="#003344" cellpadding="20">
+<table width="80%" bgcolor="#003344" cellpadding="20" align="center">
   <tr>
     <td align="center">
      <a href="images/header.png" target="_blank">
-     <img src="images/header.png" alt="Header Image" width="100%" height="200" title="Click to view full image">
+     <img src="images/header.png" alt="Header Image" width="100%" height="150" title="Click to view full image">
      </a>
      <h1><font face="Arial">Contact Me</font></h1>
     </td>
@@ -23,7 +23,7 @@
 </table>
 
 <!-- NAVIGATION BAR -->
-<table width="100%" bgcolor="#005577" cellpadding="10">
+<table width="80%" bgcolor="#005577" cellpadding="10" align="center">
   <tr align="center">
     <td><font face="Arial"><b><a href="index.html">🏠Home</a></b></font></td>
     <td><font face="Arial"><b><a href="cv.html">📑CV</a></b></font></td>
@@ -43,22 +43,23 @@
         <p>You can reach me through the following platforms:</p>
 
         <table border="0" cellpadding="5">
-          <tr>
-            <td align="right"><b>Email:</b></td>
-            <td><a href="mailto:haikalfarihin@gmail.com">haikalfarihin@gmail.com</a></td>
-          </tr>
-          <tr>
-            <td align="right"><b>LinkedIn:</b></td>
-            <td><a href="https://www.linkedin.com/in/haikalfarihin" target="_blank">linkedin.com/in/haikalfarihin</a></td>
-          </tr>
-          <tr>
-            <td align="right"><b>GitHub:</b></td>
-            <td><a href="https://github.com/haikalfarihin" target="_blank">github.com/haikalfarihin</a></td>
-          </tr>
-          <tr>
-            <td align="right"><b>Instagram:</b></td>
-            <td><a href="https://www.instagram.com/hykarll" target="_blank">@hykarll</a></td>
-          </tr>
+        <tr>
+          <td align="center" colspan="2">
+            <a href="mailto:haikalfarihin@gmail.com" target="_blank">
+             <img src="images/email.png" alt="Email" width="40" height="40" title="Email">
+            </a>
+            <a href="https://www.linkedin.com" target="_blank">
+             <img src="images/linkedin.png" alt="LinkedIn" width="40" height="40" title="LinkedIn">
+            </a>
+            <a href="https://github.com" target="_blank">
+             <img src="images/github.png" alt="GitHub" width="40" height="40" title="GitHub">
+            </a>
+            <a href="https://www.instagram.com" target="_blank">
+             <img src="images/instagram.png" alt="Instagram" width="40" height="40" title="Instagram">
+            </a>
+         </td>
+       </tr>
+
         </table>
 
         <p>Feel free to contact me for opportunities, collaborations, or just to connect!</p>
@@ -84,7 +85,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><input type="submit" value="Send Message"></td>
+              <td><input type="submit" value="Send Message"> <input type="reset" value="Reset"></td>
             </tr>
           </table>
         </form>
@@ -114,11 +115,11 @@
 </table>
 
 <!-- FOOTER -->
-<table width="100%" bgcolor="#003344" cellpadding="10">
+<table width="80%" bgcolor="#003344" cellpadding="10" align="center">
   <tr>
     <td align="center">
       <font face="Arial" size="2" color="white">
-        &copy; 2025 Muhammad Haikal Farihin bin Muhd Zahidi Ridzuan. Recommended browser: Chrome. Resolution: 1920x1080. Last updated: June 1, 2025.
+        &copy; 2025 Muhammad Haikal Farihin bin Muhd Zahidi Ridzuan. Recommended browser: Chrome 137.0.7151.68/69. Resolution: 1920x1080. Last updated: June 1, 2025.
       </font>
     </td>
   </tr>
