--- a/aboutme.html
+++ b/aboutme.html
@@ -11,11 +11,11 @@
 <body background="images/background.jpg" text="white" link="#00ccff" vlink="#00ccff" alink="yellow">
 
 <!-- HEADER -->
-<table width="100%" bgcolor="#003344" cellpadding="20">
+<table width="80%" bgcolor="#003344" cellpadding="20" align="center">
   <tr>
     <td align="center">
      <a href="images/header.png" target="_blank">
-     <img src="images/header.png" alt="Header Image" width="100%" height="200" title="Click to view full image">
+     <img src="images/header.png" alt="Header Image" width="100%" height="150" title="Click to view full image">
      </a>
       <h1><font face="Arial">About Me</font></h1>
     </td>
@@ -23,7 +23,7 @@
 </table>
 
 <!-- NAVIGATION -->
-<table width="100%" bgcolor="#005577" cellpadding="10">
+<table width="80%" bgcolor="#005577" cellpadding="10" align="center">
   <tr align="center">
     <td><font face="Arial"><b><a href="index.html">🏠Home</a></b></font></td>
     <td><font face="Arial"><b><a href="cv.html">📑CV</a></b></font></td>
@@ -51,12 +51,14 @@
           <tr><td><b>Program Code:</b></td><td>CDIM262</td></tr>
           <tr><td><b>Faculty:</b></td><td>Faculty of Information Science</td></tr>
           <tr><td><b>Submission Date:</b></td><td>10 June 2025</td></tr>
-          <tr><td><b>Published URL:</b></td><td><a href="https://hykarlll.github.io/personal-website/index.html">https://hykarlll.github.io/personal-website/index.html</a></td></tr>
+          <tr><td><b>Published URL:</b></td><td><a href="https://hykarlll.github.io/personal-website/">https://hykarlll.github.io/personal-website/</a></td></tr>
         </table>
 
         <br><br>
         <center>
+          <a href="images/thankyou.gif" target="_blank">
           <img src="images/thankyou.gif" alt="Animated GIF" width="300" title="Thank You for spending your time visiting my website ^^"><br><br>
+          <a href="images/uitm.jpg" target="_blank">
           <img src="images/uitm.jpg" alt="Your Photo" width="200" border="2">
         </center>
 
@@ -66,11 +68,11 @@
 </table>
 
 <!-- FOOTER -->
-<table width="100%" bgcolor="#003344" cellpadding="10">
+<table width="80%" bgcolor="#003344" cellpadding="10" align="center">
   <tr>
     <td align="center">
       <font face="Arial" size="2" color="white">
-        &copy; 2025 Muhammad Haikal Farihin bin Muhd Zahidi Ridzuan. Recommended browser: Chrome. Resolution: 1920x1080. Last updated: June 1, 2025.
+        &copy; 2025 Muhammad Haikal Farihin bin Muhd Zahidi Ridzuan. Recommended browser: Chrome 137.0.7151.68/69. Resolution: 1920x1080. Last updated: June 1, 2025.
       </font>
     </td>
   </tr>
