--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Personal Resume Website">
   <meta name="keywords" content="resume, portfolio, web design">
   <title>My Resume - Home</title>
+  <link rel="icon" type="image/ico" href="images/icon.ico">
 </head>
 <body background="images/background.jpg" text="white" link="white" alink="yellow" vlink="gray">
 
